--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4932,7 +4932,8 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"image/show/show-default-large.png"
+					"image/show/show-default-large.png",
+					"fonts/fangzheng.ttf"
 				],
 				"refer": [
 					"html/quan/space-detail.html"
