--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4936,7 +4936,8 @@
 					"fonts/fangzheng.ttf"
 				],
 				"refer": [
-					"html/quan/space-detail.html"
+					"html/quan/space-detail.html",
+					"html/register/login.html"
 				],
 				"priority": 0
 			}
