--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -548,7 +548,8 @@
 				],
 				"refer": [
 					"html/quan/class-group.html",
-					"html/quan/zone_main.html"
+					"html/quan/zone_main.html",
+					"html/quan/classSpace-persons.html"
 				],
 				"priority": 0
 			},
@@ -4847,7 +4848,8 @@
 					"js/publicProtocol.js"
 				],
 				"refer": [
-					"html/micro-course/course-introduction.html"
+					"html/micro-course/course-introduction.html",
+					"html/micro-course/course_addReply.html"
 				],
 				"priority": 0
 			},
@@ -4933,12 +4935,38 @@
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
 					"image/show/show-default-large.png",
-					"fonts/fangzheng.ttf"
+					"fonts/fangzheng.ttf",
+					"js/libs/jquery.lazyload.min.js",
+					"image/utils/video-loading.gif",
+					"image/utils/playvideo.png"
 				],
 				"refer": [
 					"html/quan/space-detail.html",
-					"html/register/login.html"
+					"html/register/login.html",
+					"html/quan/pub-dynamic.html"
 				],
+				"priority": 0
+			},
+			"html/micro-course/course_addReply.html": {
+				"resources": [
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/publicMicroClass.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
+				],
+				"refer": [],
 				"priority": 0
 			}
 		},
