--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4845,7 +4845,8 @@
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
 					"js/utils/RSAEncrypt.js",
-					"js/publicProtocol.js"
+					"js/publicProtocol.js",
+					"image/utils/load-img-error.png"
 				],
 				"refer": [
 					"html/micro-course/course-introduction.html",
