Revert "去除阴影效果"
This reverts commit 0b9fe6dc7c70d1c57a3a62ef3bd8fe5d7b2a0ded.

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2590,8 +2590,7 @@
 					"css/utils/preview.css",
 					"fonts/fangzheng.ttf",
 					"js/utils/CloudFileUtil.js",
-					"js/qiniu/qiniu.js",
-					"js/mui.previewimage.js"
+					"js/qiniu/qiniu.js"
 				],
 				"refer": [
 					"html/homework/homework-commented.html"
@@ -4848,8 +4847,7 @@
 					"js/utils/RSAEncrypt.js",
 					"js/publicProtocol.js",
 					"image/utils/load-img-error.png",
-					"image/utils/playvideo.png",
-					"js/micro-course/coursedetails.js"
+					"image/utils/playvideo.png"
 				],
 				"refer": [
 					"html/micro-course/course-introduction.html",
