--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4203,7 +4203,8 @@
 				"refer": [
 					"html/show/add-comment.html",
 					"html/register/login.html",
-					"html/quan/zone_main.html"
+					"html/quan/zone_main.html",
+					"html/micro-course/course_addReply.html"
 				],
 				"priority": 0
 			},
@@ -4967,7 +4968,8 @@
 					"js/utils/signHmacSHA1.js",
 					"js/libs/RSA/RSA.js",
 					"js/utils/postData.js",
-					"js/utils/RSAEncrypt.js"
+					"js/utils/RSAEncrypt.js",
+					"js/libs/crypto-js/crypto-js.js"
 				],
 				"refer": [],
 				"priority": 0
