发布展现 不允许发一个空格 展现详情 家长个人空间 开启硬件加速

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4440,7 +4440,9 @@
 				],
 				"refer": [
 					"html/register/login.html",
-					"html/quan/pub-leave.html"
+					"html/quan/pub-leave.html",
+					"html/quan/leave-reply.html",
+					"html/quan/zone_main.html"
 				],
 				"priority": 0
 			},
@@ -4964,6 +4966,28 @@
 					"js/libs/jquery.js",
 					"js/mui.min.js",
 					"js/publicMicroClass.js",
+					"js/libs/RSA/BigInt.js",
+					"css/mui.min.css",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"js/libs/crypto-js/crypto-js.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/quan/leave-reply.html": {
+				"resources": [
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"css/utils/common.css",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
 					"js/libs/RSA/BigInt.js",
 					"css/mui.min.css",
 					"js/utils/signHmacSHA1.js",
