个人空间 展现上传相册视频

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2335,7 +2335,9 @@
 					"js/utils/load.js",
 					"js/utils/recordvideoutil.js",
 					"js/utils/video.js",
-					"image/utils/playvideo.png"
+					"image/utils/playvideo.png",
+					"js/utils/gallerypick.js",
+					"image/utils/videothumb.png"
 				],
 				"refer": [],
 				"priority": 0
