莫录像 苹果上传

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2335,7 +2335,8 @@
 					"js/utils/load.js",
 					"js/utils/recordvideoutil.js",
 					"js/utils/video.js",
-					"image/utils/playvideo.png"
+					"image/utils/playvideo.png",
+					"image/utils/videothumb.png"
 				],
 				"refer": [],
 				"priority": 0
