--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -902,7 +902,8 @@
 					"html/quan/pub-dynamic.html",
 					"html/mine/qun_manage_a.html",
 					"html/index/mine.html",
-					"html/cloud/order-member.html"
+					"html/cloud/order-member.html",
+					"html/cloud/storage_transport.html"
 				],
 				"priority": 0
 			},
@@ -2817,7 +2818,9 @@
 					"fonts/fangzheng.ttf",
 					"js/utils/compress.js"
 				],
-				"refer": [],
+				"refer": [
+					"html/cloud/storage_upload.html"
+				],
 				"priority": 0
 			},
 			"html/quan/pub-leave.html": {
