上传文件多选

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4652,7 +4652,29 @@
 					"css/utils/preview.css",
 					"image/utils/videothumb.png",
 					"js/libs/crypto-js/crypto-js.js",
-					"js/utils/gallerypick.js"
+					"js/utils/gallerypick.js",
+					"js/utils/cryption.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/cloud/AndroidFileSystem.js",
+					"js/utils/recordvideoutil.js",
+					"js/utils/playutil.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/mui.zoom.js",
+					"js/utils/compress.js",
+					"js/mui.previewimage.js",
+					"js/utils/signHmacSHA1.js",
+					"js/utils/postData.js",
+					"js/storageKeyName.js",
+					"js/utils/showvideoutil.js",
+					"js/libs/crypto-js/require.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/utils/CloudFileUtil.js",
+					"js/libs/RSA/BigInt.js",
+					"js/qiniu/qiniu.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
