--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2337,7 +2337,8 @@
 					"js/utils/recordvideoutil.js",
 					"js/utils/video.js",
 					"image/utils/playvideo.png",
-					"image/utils/videothumb.png"
+					"image/utils/videothumb.png",
+					"js/utils/gallerypick.js"
 				],
 				"refer": [],
 				"priority": 0
