--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -546,7 +546,8 @@
 					"js/mui.previewimage.js",
 					"js/mui.pullToRefresh.js",
 					"js/mui.pullToRefresh.material.js",
-					"js/utils/video.js"
+					"js/utils/video.js",
+					"js/utils/showvideoutil.js"
 				],
 				"refer": [
 					"html/quan/class-group.html",
@@ -2442,7 +2443,9 @@
 					"js/utils/showvideoutil.js",
 					"css/utils/audiopopover.css",
 					"js/utils/playutil.js",
-					"image/utils/loading.gif"
+					"image/utils/loading.gif",
+					"image/qiuzhi/qiuzhi_noanswer.png",
+					"css/iconfont/iconfont.css"
 				],
 				"refer": [
 					"html/cloud/app_notes_create.html"
