修改上传失败的逻辑

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -1720,7 +1720,9 @@
 					"html/cloud/storage_show_imge.html",
 					"html/cloud/storage_upload_choose.html",
 					"html/cloud/storage_upload.html",
-					"html/cloud/storage_main_choose.html"
+					"html/cloud/storage_main_choose.html",
+					"html/cloud/storage_transport.html",
+					"html/cloud/storage_show_video.html"
 				],
 				"priority": 0
 			},
@@ -5102,6 +5104,14 @@
 					"html/register/login.html",
 					"html/micro-course/course_addReply.html"
 				],
+				"priority": 0
+			},
+			"html/cloud/storage_show_video.html": {
+				"resources": [
+					"css/mui.min.css",
+					"css/utils/common.css"
+				],
+				"refer": [],
 				"priority": 0
 			}
 		},
