--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -5162,7 +5162,8 @@
 					"image/show/show-default-large.png"
 				],
 				"refer": [
-					"html/register/login.html"
+					"html/register/login.html",
+					"html/quan/space-detail.html"
 				],
 				"priority": 0
 			}
