注释修改了的页面和逻辑

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2465,7 +2465,8 @@
 					"js/utils/playutil.js",
 					"image/utils/loading.gif",
 					"image/qiuzhi/qiuzhi_noanswer.png",
-					"css/iconfont/iconfont.css"
+					"css/iconfont/iconfont.css",
+					"image/cloud/cloud_0_unknow_0.png"
 				],
 				"refer": [
 					"html/cloud/app_notes_create.html"
