展现中的“全部”栏目，发布新的动态后没有即刻刷新0513 0701

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -2381,7 +2381,10 @@
 					"js/utils/video.js",
 					"image/utils/playvideo.png",
 					"image/utils/videothumb.png",
-					"js/utils/gallerypick.js"
+					"js/utils/gallerypick.js",
+					"js/mui.zoom.js",
+					"js/mui.previewimage.js",
+					"css/utils/preview.css"
 				],
 				"refer": [],
 				"priority": 0
