新展現詳情邏輯框架

--- a/JiaoBaoYun-hb/manifest.json
+++ b/JiaoBaoYun-hb/manifest.json
@@ -4321,7 +4321,20 @@
 			"html/mine/qun_manage_info_change_post.html": {
 				"resources": [
 					"css/mui.min.css",
-					"css/utils/common.css"
+					"css/utils/common.css",
+					"js/storageKeyName.js",
+					"js/utils/events.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/mui.min.js",
+					"js/libs/RSA/BigInt.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js"
 				],
 				"refer": [],
 				"priority": 0
@@ -5098,7 +5111,8 @@
 				"refer": [
 					"html/quan/space-detail.html",
 					"html/register/login.html",
-					"html/quan/pub-dynamic.html"
+					"html/quan/pub-dynamic.html",
+					"html/show/show-detail.html"
 				],
 				"priority": 0
 			},
@@ -5253,6 +5267,31 @@
 					"js/utils/RSAEncrypt.js",
 					"css/utils/common.css",
 					"js/libs/myStorage/myStorage.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/show/show-detail.html": {
+				"resources": [
+					"js/show/show-comment.js",
+					"js/utils/vue.js",
+					"js/mui.min.js",
+					"js/utils/events.js",
+					"css/mui.min.css",
+					"css/utils/common.css",
+					"js/publicModel.js",
+					"js/storageKeyName.js",
+					"js/libs/RSA/Barrett.js",
+					"js/libs/crypto-js/require.js",
+					"js/libs/myStorage/myStorage.js",
+					"js/publicProtocol.js",
+					"js/libs/jquery.js",
+					"js/libs/RSA/BigInt.js",
+					"js/utils/signHmacSHA1.js",
+					"js/libs/RSA/RSA.js",
+					"js/utils/postData.js",
+					"js/utils/RSAEncrypt.js",
+					"js/libs/crypto-js/crypto-js.js"
 				],
 				"refer": [],
 				"priority": 0
